--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
         <nav class="flex flex-col gap-5 justify-center  px-[60px] py-6 sm:flex-row  sm:justify-between">
             <div class="flex flex-col sm:flex-row items-center gap-2  ">
                 <img class="w-[50px] h-[50px]" src="./assets/logo.png" alt="">
-                <h1 class="hind-madurai text-lg/5 font-bold text-[#006747] ">Emergency<br
-                        class="hidden sm:inline-block">Service</h1>
+                <img class="h-[45px]" src="./assets/logo-es.svg" alt="">
+
+                <!-- <h1 class="hind-madurai text-lg/5 font-bold text-[#006747] ">Emergency<br
+                        class="hidden sm:inline-block">Service</h1> -->
             </div>
 
             <!-- nav right -->
@@ -294,21 +296,22 @@
             </div>
         </div>
         <!-- call history section  -->
-        <div class="md:w-1/3 bg-white p-[24px]">
-            <!-- heading  -->
+        <div class="md:w-1/3 max-w-[400px] bg-white p-6 rounded-xl shadow-md">
+            <!-- heading -->
             <div class="flex items-center justify-between">
                 <div class="flex items-center gap-2">
                     <i class="fa-regular fa-clock text-xl"></i>
-                    <h1 class="text-xl font-bold">Call History</h1>
+                    <h1 class="text-xl font-bold hind-madurai">Call History</h1>
                 </div>
-                <div id="btn-clear" class="py-[12px] px-[50px] w-fit bg-[#00A63E] hover:bg-green-700 rounded-[50px]">
-                    <h1 class="font-bold text-xl text-white">Clear</h1>
+                <div id="btn-clear" class="py-2 px-6 bg-[#00A63E] hover:bg-green-700 rounded-full cursor-pointer">
+                    <h1 class="font-bold text-white roboto">Clear</h1>
                 </div>
             </div>
             <!-- content  -->
-            <div id="call-history-content"
-                class="flex flex-col gap-2 items-center mt-[16px] justify-between p-[16px] bg-white">
+            <div id="call-history-content" class="flex flex-col gap-3 mt-4">
+                <!-- <div class="p-3 rounded-lg border bg-gray-50 flex justify-between">
 
+                </div> -->
             </div>
         </div>
     </main>
