width ratio fixed

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
             <!-- nav right -->
 
-            <div class="flex flex-col sm:flex-row items-center gap-7    ">
+            <div class="flex flex-col sm:flex-row items-center gap-7">
                 <div class="flex justify-center items-center gap-3 rounded-full bg-[#41ff6b1a] w-[100px] h-[50px]">
                     <h1 class="font-bold">0</h1>
                     <img class="w-7 h-7" src="./assets/heart.png" alt="">
@@ -68,7 +68,7 @@
     <!-- main section  -->
     <main class="max-w-[1800px] mx-auto my-[50px] flex flex-col-reverse md:flex-row gap-[30px] p-[10px]">
         <!-- cards section  -->
-        <div class="cards md:w-2/3 grid grid-cols-1 md:grid-cols-3 gap-[30px]">
+        <div class="cards md:w-3/4 grid grid-cols-1 md:grid-cols-3 gap-[30px]">
             <div class="card flex flex-col bg-white p-6 shadow-md rounded-xl">
                 <div class="flex items-center justify-between mb-4">
                     <div class="w-14 h-14 flex items-center justify-center bg-[#FFE3E2] rounded-lg">
@@ -296,7 +296,7 @@
             </div>
         </div>
         <!-- call history section  -->
-        <div class="md:w-1/3 max-w-[400px] bg-white p-6 rounded-xl shadow-md">
+        <div class="flex flex-col md:w-1/4 bg-white p-6 rounded-xl shadow-md">
             <!-- heading -->
             <div class="flex items-center justify-between">
                 <div class="flex items-center gap-2">
